Removed unnecessary Files and Updated .gitignore file

--- a/Lab3/.gitignore
+++ b/Lab3/.gitignore
@@ -1,21 +1,18 @@
 work
-# mapped
-# fpga
+mapped
+fpga
 transcript
-# Makefile
+Makefile
 modelsim.ini
 *.wlf
-# README
+README
 *.swp
 ._*
 *.log
 .deps
 *.hex
 *.ver
-
 *~
-*/*~
-*.bak
-*/*.bak
-
 *.summary
+*.diff
+wlft*
